# python-poetry-template

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  noxfile.py  pyproject.toml
tests/: test_default.py
